--- a/public/footer/footer.css
+++ b/public/footer/footer.css
@@ -1,6 +1,5 @@
 body {
     background-color: rgb(248, 243, 236);
-    /* background-color: rgb(238, 226, 214); */
     background-image: url("https://www.dacapopianolessons.com/wp-content/uploads/2019/03/circle-background-pattern.png");
     background-position: center;
     background-repeat: no-repeat;
@@ -8,4 +7,10 @@ body {
     background-size: cover;
     padding-top: 70px;
     padding-bottom: 70px; 
+}
+
+#footer-container {
+    border-top: 2px solid rgb(66, 77, 64); 
+    padding: 5px 5px; 
+    background-color: rgb(248, 243, 236);
 }
