--- a/public/joke_category/joke_category.css
+++ b/public/joke_category/joke_category.css
@@ -2,9 +2,6 @@
     margin-top: 50px;
     font-size: 20px;
     padding: 10px 10px; 
-    /* background-color: rgb(238, 237, 234); */
-    /* border: 1px solid black;
-    box-shadow: 10px 10px 5px grey; */
 }
 
 .heading {
@@ -12,7 +9,6 @@
     border-bottom: 1px solid black; 
     padding: 10px 0px;
 }
-
 
 .col-style{
     background-color: rgb(194, 214, 189); 
@@ -34,4 +30,22 @@
 
 #category-list li{
     list-style-type: none;
+}
+
+#joke1 {
+    border-bottom: 1px solid black; 
+    padding: 20px 0px;
+}
+
+#joke2 {
+    border-bottom: 1px solid black; 
+    padding: 20px 0px;
+}
+
+#joke3 {
+    padding: 20px 0px;
+}
+
+#container-footer {
+    padding: 10px 0px; text-align:center;
 }
