--- a/public/login_register/login_register.css
+++ b/public/login_register/login_register.css
@@ -1,5 +1,4 @@
-
-#login-signup-box {
+#login-register-box {
     margin: 100px auto;
     padding: 10px 10px; 
     background-color: rgb(233, 225, 217);
