--- a/public/random_joke/random_joke.css
+++ b/public/random_joke/random_joke.css
@@ -2,9 +2,25 @@
     margin-top: 50px;
     width: 50%; 
     font-size: 20px;
-    
     padding: 10px 10px; 
     background-color: rgb(194, 214, 189);
     border: 1px solid black;
     box-shadow: 10px 10px 5px grey;
+}
+
+#joke-header {
+    border-bottom: solid 1px rgb(140, 140, 140); 
+    padding: 10px 10px; text-align: center; 
+    margin: 10px 10px;
+}
+
+#joke-body {
+    margin: 10px 10px; 
+    padding: 20px 0px;
+}
+
+#joke-footer {
+    border-top: solid 1px rgb(140, 140, 140); 
+    padding-top: 20px; 
+    margin: 10px 10px;
 }
